show projects in model 3d done

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,17 @@
   color-scheme: dark;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
   display: block;
+  color: #52928766;
 }
 
 .black-gradient {
